@@ -243,7 +243,7 @@ Or ((1_word color) (2_word color) 3_word (4_word color)...)"
 		 (handle-button-release (&rest event-slots &key window root-x root-y code state &allow-other-keys)
 		   (declare (ignore event-slots))
 		   (funcall-button-from-code *info-mouse* code state window root-x root-y *fun-release* (list info))))
-	  (xlib:map-window window)
+	  (map-window window)
 	  (draw-info-window info)
 	  (xgrab-pointer *root* 68 69)
 	  (unless keyboard-grabbed-p
